5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1582_2897.log
== SUBMITION (2019-03-16 23:52:24) 
-- CODE:
num = int(input("11:"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.138553
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:52:35) 
-- CODE:
num = int(input("11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.144091
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:52:36) 
-- CODE:
num = int(input("11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.111633
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:47) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.236325
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:47) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.127622
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:49) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.228737
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:49) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.244846
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:49) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.604611
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:49) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.690717
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:49) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.773673
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:49) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.751231
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:50) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.303028
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:50) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.267192
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:50) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.615064
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:51) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.798971
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:51) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.837154
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:51) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.831226
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:51) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.150343
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:51) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.145981
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:51) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.236293
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:51) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.344164
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:51) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.519532
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:51) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.680695
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:52) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.14081
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:52) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.237972
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:52) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.283981
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:55:52) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.346632
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 00:02:14) 
-- CODE:
num = int(input("Digite o numero:11"))

# Leitura de valores de entrada e conversao para intei
num = int(input("Digite o numero:11"))


# Impressao do dobro do numero
print(22)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:35:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.19437
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:35:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.172229
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1122
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
1122
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:35:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.289325
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1122
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
1122
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:35:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.249911
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1122
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
1122
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:35:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.459101
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1122
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:35:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.23895
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1122
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
1122
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:35:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.144287
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1122
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
1122
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:35:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.181996
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1122
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
1122
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:36:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
input()
int(11)
# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.14367
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 5, in <module>
    input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:36:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
input()
int(11)
# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.102113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 5, in <module>
    input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:53:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num. = int(input(11))
input()
int(11)
# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.124746
-- ERROR:
  File "/home/codebench/codes/1582/2897/main.py", line 4
    num. = int(input(11))
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:53:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num. = int(input(11))
input()
int(11)
# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.109343
-- ERROR:
  File "/home/codebench/codes/1582/2897/main.py", line 4
    num. = int(input(11))
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:53:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num. = int(input(11))
input()
int(11)
# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.090847
-- ERROR:
  File "/home/codebench/codes/1582/2897/main.py", line 4
    num. = int(input(11))
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:09:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num. = int(input(11))
input()
int(11)
# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.199488
-- ERROR:
  File "/home/codebench/codes/1582/2897/main.py", line 4
    num. = int(input(11))
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:16:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:17:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.14942
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:17:27) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))

# Impressao do dobro do numero
print(num.)
-- EXECUTION TIME:
0.126791
-- ERROR:
  File "/home/codebench/codes/1582/2897/main.py", line 7
    print(num.)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:17:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.141529
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:17:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))

# Impressao do dobro do numero
print(var(num))
-- EXECUTION TIME:
0.161906
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 7, in <module>
    print(var(num))
NameError: name 'var' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:18:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))

# Impressao do dobro do numero
print(22)
-- EXECUTION TIME:
0.143983
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:19:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.186075
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:19:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.148849
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:19:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:19:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:20:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(2*num)
-- EXECUTION TIME:
0.211129
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:21:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(2*num)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
